# Speech-Speaker-Recognition

./: .env.example  LICENSE  README.md  STRUCTURE.md  pyproject.toml  quickstart.py  run_pipeline.sh  setup.bat  setup.sh
examples/: basic_usage.py  batch_processing.py
speech_pipeline/: audio_utils.py  cli.py  config.py  pipeline.py
tests/: test_pipeline.py
